--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,16 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    //Test
+    testImplementation 'org.testng:testng:7.8.0'
+    //padrao
+    implementation 'org.testng:testng:7.8.0'
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'org.slf4j:slf4j-simple:1.7.32'
     implementation 'org.mongodb:mongodb-driver-sync:4.11.1'
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG ()
 }
